--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <! -- metadata -->
     <meta charset="utf-8">
     <title>smokeyRiver</title>
+    <link rel="stylesheet" href="styles.css">
   </tag>
   <! -- content -->
   <body>
   <center>
 	<section>
 	<h1>smokeyRiver</h1>
-	was named for the condensation weather phenomena known as steam fog observed at Algonquin Park, Ontario. However, the image itself does not depict the glacier-carved
-  lakes that scatter the Canadian interior. Rather, it depicts a mountain valley river system.
+	<p class="normal-text">was named for the condensation weather phenomena known as steam fog observed at Algonquin Park, Ontario. However, the image itself does not depict the glacier-carved
+  lakes that scatter the Canadian interior. Rather, it depicts a mountain valley river system.</p>
 	</section>
   </center>
   </body>
